--- a/templates/index.html
+++ b/templates/index.html
@@ -19,7 +19,7 @@
             <a class="topbar-brand" href="{{ url_for('web.index') }}">Game Editor</a>
             <nav class="topbar-nav" aria-label="Global">
                 <a class="topbar-link is-active" href="{{ url_for('web.index') }}">Editor</a>
-                <a class="topbar-link" href="{{ url_for('updates.updates_page') }}">IGDB Updates</a>
+                <a class="topbar-link" href="{{ url_for('updates.updates_page') }}">Update</a>
                 <a class="topbar-link" href="{{ url_for('lookups.lookups_page') }}">Lookups</a>
                 <a class="topbar-link" href="{{ url_for('web.logout') }}">Logout</a>
             </nav>
